--- a/_css/pages/_ministries.scss
+++ b/_css/pages/_ministries.scss
@@ -40,7 +40,7 @@
 }
 
 .ministriesContent__content__pageHeader h1 span {
-    color: $main-color;
+    color: $primary-color;
 }
 
 .ministriesContent__content__content {
@@ -65,7 +65,7 @@
 
 .ministriesContent__content__basic-info {
     display: flex;
-    background: $main-color;
+    background: $primary-color;
     color: $white;
     width: 100%;
     padding: 20px;
