--- a/_css/_settings.scss
+++ b/_css/_settings.scss
@@ -1,53 +1,21 @@
 //  Foundation for Sites Settings
 //  -----------------------------
-//
-//  Table of Contents:
-//
-//   1. Global
-//   2. Breakpoints
-//   3. The Grid
-//   4. Base Typography
-//   5. Typography Helpers
-//   6. Abide
-//   7. Accordion
-//   8. Accordion Menu
-//   9. Badge
-//  10. Breadcrumbs
-//  11. Button
-//  12. Button Group
-//  13. Callout
-//  14. Close Button
-//  15. Drilldown
-//  16. Dropdown
-//  17. Dropdown Menu
-//  18. Flex Video
-//  19. Forms
-//  20. Label
-//  21. Media Object
-//  22. Menu
-//  23. Meter
-//  24. Off-canvas
-//  25. Orbit
-//  26. Pagination
-//  27. Progress Bar
-//  28. Reveal
-//  29. Slider
-//  30. Switch
-//  31. Table
-//  32. Tabs
-//  33. Thumbnail
-//  34. Title Bar
-//  35. Tooltip
-//  36. Top Bar
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,600italic,700,700italic,800);
 @import '../bower_components/foundation-sites/scss/util/util';
 
-// 1. Global
-// ---------
 
-$global-font-size: 100%;
-$global-width: rem-calc(1200);
-$global-lineheight: 1.5;
+// 1. FONTS
+// To Change the fonts 
+// a. add the @import rule here: (get this from Google Fonts)
+@import url(https://fonts.googleapis.com/css?family=Lusitana:400,700);
+@import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic);
+@import url(https://fonts.googleapis.com/css?family=Merriweather+Sans:400,300,300italic,400italic,700,800,700italic,800italic);
+// b. Change these variables.
+$body-font-family:'Merriweather Sans', sans-serif;
+$header-font-family: 'Lusitana', serif;
+
+
+// 2. Colors
+// The variables below control the color on the whole site.  Changing them changes the entire sites look and feel.
 $foundation-palette: (
   primary: #8093AD,
   secondary: #8093AD,
@@ -55,26 +23,21 @@ $foundation-palette: (
   warning: #8093AD,
   alert: #8093AD,
 );
-$main-color: #8093AD;
-$secondary-color: #8093AD;
-$bold-color: #8093AD;
-$subtle-color: #8093AD;
 $text-color: #8093AD;
-$brown: #644C2E; 
 $light-gray: #e6e6e6;
 $medium-gray: #B8B8AD;
 $dark-gray: #333533;
-$orange: #B47623;
-$dark-green: #202216;
 $black: #0e0b08;
 $white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family:'Merriweather Sans', sans-serif;
-$body-font-family: 'Merriweather Sans', sans-serif;
-$serif: 'Lusitana', serif;
-$serif-2: 'Merriweather', serif;
-$sans-serif: 'Merriweather Sans', sans-serif;
+
+// UNLESS YOU KNOW WHAT YOU ARE DOING LEAVE THE REST OF THIS STUFF ALONE!
+//________________________________________________
+
+$global-font-size: 100%;
+$global-width: rem-calc(1200);
+$global-lineheight: 1.5;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
@@ -113,12 +76,9 @@ $block-grid-max: 8;
 
 // 4. Base Typography
 // ------------------
-$header-font-family: 'Lusitana', serif;
+
 $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
-$sans-serif: $header-font-family;
-$serif: 'Lusitana', serif;
-$serif-2: 'Merriweather', serif;
 $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
