--- a/_css/pages/_blogPost.scss
+++ b/_css/pages/_blogPost.scss
@@ -38,7 +38,7 @@ h2 {
     h1 {
         border-bottom: none;
         margin-bottom: 0;
-        color: $subtle-color;
+        color: $success-color;
     }
 }
 
