--- a/_css/pages/_sermons.scss
+++ b/_css/pages/_sermons.scss
@@ -89,8 +89,8 @@ h2 {
     margin-top: 30px;
     h3 {
         font-size: 25px;
-        border-bottom: 1px solid $main-color;
-        color: $main-color;
+        border-bottom: 1px solid $primary-color;
+        color: $primary-color;
     }
     ul {
         @include menu-base;
