Added backup and theme switcher utility

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,16 @@
-{% include head.html %}
+<!DOCTYPE html>
+<html>
+
+  {% include head.html %}
+
   <body>
-    {% include  navigation.html %}
-    {{ content }}
+
+    {% include header.html %}
+
+        {{ content }}
+
     {% include footer.html %}
+
   </body>
+
 </html>
