--- a/_themeBackups/24-Jun-2016/_layouts/event.html
+++ b/_themeBackups/24-Jun-2016/_layouts/event.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="calendar-list">
+div class="calendar-list">
 <div class="calendar-header">
     <div class="wrapper">
     <div class="calendar-header-text">
