--- a/_css/_settings2.scss
+++ b/_css/_settings2.scss
@@ -39,12 +39,11 @@
 //  34. Title Bar
 //  35. Tooltip
 //  36. Top Bar
-@import 'https://fonts.googleapis.com/css?family=Martel';
+
 @import '../bower_components/foundation-sites/scss/util/util';
 
 // 1. Global
 // ---------
-
 $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
@@ -65,10 +64,12 @@ $light-gray: #e6e6e6;
 $medium-gray: #303633;
 $dark-gray: #0e0b08;
 $black: #0e0b08;
-$white: #ffffff;
+$white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family:'Martel', serif;
+$body-font-family: 'Open Sans', sans-serif;
+$sans-serif: $body-font-family;
+// $body-font-family: 'Gentium Basic', serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
@@ -78,6 +79,7 @@ $global-radius: 0;
 $global-text-direction: ltr;
 $global-flexbox: false;
 $print-transparent-backgrounds: true;
+
 
 @include add-foundation-colors;
 
@@ -145,7 +147,7 @@ $code-font-weight: $global-weight-normal;
 $code-background: $light-gray;
 $code-border: 1px solid $medium-gray;
 $code-padding: rem-calc(2 5 1);
-$anchor-color: $primary-color;
+$anchor-color: $main-color;
 $anchor-color-hover: scale-color($anchor-color, $lightness: -14%);
 $anchor-text-decoration: none;
 $anchor-text-decoration-hover: none;
