--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,27 +1,21 @@
-</div><!--/wrapper-->  
 <footer>
-        <div class="footer-wrapper">
-        <div class="footer-main">
-            <ul>
-                <li><a href="#">Visit</a></li>
-                <li><a href="">Sermons</a></li>
-                <li><a href="">Gallery</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-            <p>Community Baptist is located at 5267 Sound Ave, across from the North Fork Christmas Tree farm and one mile east of Long Island National Golf Club.  <a href="#">Visit this Sunday.</a></p>
-        </div><!--/main footer-->
-        <div class="footer-contact">
-        <p class="logo">Community Baptist Church</p>
-        <ul>
-            <li><a href="#"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-facebook fa-stack-1x"></i></span></a></li>
-            <li><a href="#"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-twitter fa-stack-1x"></i></span></a></li>
-            <li><a href="#"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-youtube fa-stack-1x"></i></span></a></li>
-            <li><a href="#"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-rss fa-stack-1x"></i></span></a></li>
-            <li><a href="#"><span class="fa-stack"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-gear fa-stack-1x"></i></span></a></li>
-        </ul>
-            
-        </div><!--/footer-contact-->
-        </div><!--/footer-wrapper-->
-    </footer>
-    <script src="{{site.url}}assets/js/app.js"></script>
+    <div class="footer-wrapper">
+        <div class="footer-info">
+        <h3>Cranesville Bible Church</h3>
+        <p>Cranesville, PA</p>
+        <div class="address">
+            <p><i class="fi-map"></i>   10029 Reed St, Cranesville, PA 16410 <br>
+                <i class="fi-telephone"></i>  (814) 746-5287 <br>
+                <i class="fi-mail"></i>   info@cranesvillebiblechurch.com <br>
+                <a href="#" title="sign in" class="footer-sign-in"><i class="fi-widget"></i> Manager Sign In</a>
+            </p>
+        </div><!--/address-->
+    </div><!--/footer-info-->
+    </div><!--/footer-wrapper-->
+</footer>
+</div><!--/ off canvas content wrapper-->
+</div><!--/off canvas wrapper 2-->
+</div><!--/ off canvas wrapper 1-->
+<script src="{{ "/assets/js/app.js" | prepend: site.baseurl }}"></script>
+</body>
+</html>
