--- a/_themeBackups/24-Jun-2016/_css/app.scss
+++ b/_themeBackups/24-Jun-2016/_css/app.scss
@@ -1,6 +1,4 @@
 @charset 'utf-8';
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,600italic,700,700italic,800);
-// @import url(https://fonts.googleapis.com/css?family=Open+Sans:600,700,700italic,600italic|Gentium+Basic:400,700,400italic,700italic);
 @import 'settings';
 @import '../bower_components/foundation-sites/scss/foundation';
 @import '../bower_components/motion-ui/motion-ui';
@@ -51,19 +49,6 @@
 @include motion-ui-animations;
 
 
-@import 'components/navigation';
-@import 'components/icons';
-@import 'components/hero';
-@import 'components/home';
-@import 'components/about';
-@import 'components/ministries';
-@import 'components/footer';
-@import 'components/welcome';
-@import 'components/blog-list';
-@import 'components/blog-entry';
-@import 'components/devotions';
-@import 'components/sermons';
-@import 'components/serieslist';
-@import 'components/calendar-list';
-@import 'components/welcome-section';
+@import 'elements/elements-dir';
+@import 'pages/pages-dir'; 
 
