--- a/_themeBackups/24-Jun-2016/_layouts/series.html
+++ b/_themeBackups/24-Jun-2016/_layouts/series.html
@@ -5,23 +5,31 @@ layout: default
 <div class="sermonslistContent__header">
     <div class="wrapper">
         <h1>Sermons</h1>
-        <h3>The Preaching Ministry of Cranesville Bible Church</h3>
+        <h3>The Preaching Ministry of Bible Baptist Church</h3>
         </div><!--/sermonslistContent__header-->
-    </div>
-<div class="sermonslistContent">
+    </div><!--/sermonlistContent__header-->
+<div class="singleSeriesHeader">
+    <h2>{{page.title}}</h2>
+    {%if page.featured_image%}
+    {% for img in page.featured_image %}
+    <img class="singleSeriesHeader__mainImage" src="{{img.url}}" alt="{{page.title}}">
+    {% endfor %}
+    {% else %}
+    <img class="singleSeriesHeader__mainImage" src="http://placehold.it/1920x1080" alt="Series Graphic">
+    {% endif %}
+</div><!--/singleSeriesHeader-->
+<div class="singleSeriesContent">
+
+    {% if page.description %}
+    {{page.description | markdownify }}
+    {% endif %}
+
+</div><!--/singleSeriesContent-->
+<div class="sermonslistContent singleSeriesPage">
     <div class="sermonslistContent__MainList">
-        <h2>All Sermons:</h2>
-    {% for sermon in site.data.sermons %}
+        {% for sermon in site.data.sermons %}
+      {% if sermon.series_title[0] == page.title %}
         <div class="sermonslistItem">
-            <div class="sermonslistItem__thumbnail">
-                {% if sermon.series_featured_image %}
-                    {% for img in sermon.series_featured_image %}
-                    <img src="{{img.url}}" alt="{{sermon.series_title}}">
-                    {% endfor %}
-                {% else %}
-                    <img src="http://placehold.it/560x315?text=sermons+graphic" alt="">
-                {% endif %}
-            </div><!--/sermonslistitem__thumbnail-->
             <div class="sermonslistItem__teaser">
             <div class="sermonslistItem__title">
                 <h3><a href="{{ sermon.title | datapage_url: 'sermons' | prepend: site.baseurl | prepend: site.url }}">{{sermon.title}}</a></h3>
@@ -49,21 +57,21 @@ layout: default
                 <li><i class="fi-torso-business"></i> {{sermon.speaker_name}}</li>
                 <li><i class="fi-book"></i> {{sermon.bible_text}}</li>
                 </ul>
-                <p class="sermonslistItem__description">{% if sermon.body_content %}{{sermon.body_content | markdownify | truncate: 140 }}{% endif %}</p>
+                <p class="sermonslistItem__description">{{sermon.body_content | truncate: 140 }}</p>
                 {% if sermon.sermon_mp3 %}
                 {% for item in sermon.sermon_mp3 %}
                 <audio class="sermonslistPlayer" controls>
                     <source src="{{item.url}}" type="audio/mpeg">
                     Your browser does not support the audio element.
                     </audio>
-                <a href="{{item.url}}" class="button secondary" target="blank" download><i class="fi-download"></i> Download</a>
+                <a href="{{item.url}}" class="button warning" target="blank" download><i class="fi-download"></i> Download</a>
                 {% endfor %}
                 {% endif %}
                 <a href="{{ sermon.title | datapage_url: 'sermons' | prepend: site.baseurl | prepend: site.url }}" class="button" >View Sermon</a>
             </div><!--/sermonslistItem__teaser-->
         </div><!--/sermonslistItem-->
+        {% endif %}
      {% endfor %}
     </div><!--/end main list-->
 </div><!--/sermonslistContent-->
 {% include serieslist.html %}
-
