--- a/_css/components/_navigation.scss
+++ b/_css/components/_navigation.scss
@@ -14,7 +14,7 @@ header {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    color: darken($subtle-color, 15%);
+    color: darken($warning-color, 15%);
     display: flex;
     align-items: center;
 
@@ -100,7 +100,7 @@ header {
 }
 
 .MainNavigation ul li ul li a {
-    color: darken($subtle-color, 15%);
+    color: darken($warning-color, 15%);
 }
 
 .MobileNavigation {
