--- a/_themes/proclaim/_css/_settings.scss
+++ b/_themes/proclaim/_css/_settings.scss
@@ -1,74 +1,39 @@
 //  Foundation for Sites Settings
 //  -----------------------------
-//
-//  Table of Contents:
-//
-//   1. Global
-//   2. Breakpoints
-//   3. The Grid
-//   4. Base Typography
-//   5. Typography Helpers
-//   6. Abide
-//   7. Accordion
-//   8. Accordion Menu
-//   9. Badge
-//  10. Breadcrumbs
-//  11. Button
-//  12. Button Group
-//  13. Callout
-//  14. Close Button
-//  15. Drilldown
-//  16. Dropdown
-//  17. Dropdown Menu
-//  18. Flex Video
-//  19. Forms
-//  20. Label
-//  21. Media Object
-//  22. Menu
-//  23. Meter
-//  24. Off-canvas
-//  25. Orbit
-//  26. Pagination
-//  27. Progress Bar
-//  28. Reveal
-//  29. Slider
-//  30. Switch
-//  31. Table
-//  32. Tabs
-//  33. Thumbnail
-//  34. Title Bar
-//  35. Tooltip
-//  36. Top Bar
-@import 'https://fonts.googleapis.com/css?family=Martel';
 @import '../bower_components/foundation-sites/scss/util/util';
 
-// 1. Global
-// ---------
 
-$global-font-size: 100%;
-$global-width: rem-calc(1200);
-$global-lineheight: 1.5;
+// 1. FONTS
+// To Change the fonts 
+// a. add the @import rule here: (get this from Google Fonts)
+@import 'https://fonts.googleapis.com/css?family=Martel';
+// b. Change these variables.
+$body-font-family:'Martel', serif;
+$header-font-family: $body-font-family;
+
+
+// 2. Colors
+// The variables below control the color on the whole site.  Changing them changes the entire sites look and feel.
 $foundation-palette: (
-  primary: #319827,
-  secondary: #5C3F23,
-  success: #3C6E71,
-  warning: #4B4E6D,
-  alert: #319827,
+  primary: #8093AD,
+  secondary: #8093AD,
+  success: #8093AD,
+  warning: #8093AD,
+  alert: #8093AD,
 );
-$main-color: #319827;
-$primary-color: $main-color !global;
-$secondary-color: #5C3F23 !global;
-$bold-color: #3C6E71;
-$subtle-color: #4B4E6D;
-$text-color: #1F1F15;
+$text-color: #8093AD;
 $light-gray: #e6e6e6;
-$medium-gray: #303633;
-$dark-gray: #0e0b08;
+$medium-gray: #B8B8AD;
+$dark-gray: #333533;
 $black: #0e0b08;
-$white: #ffffff;
+$white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family:'Martel', serif;
+
+
+
+// UNLESS YOU KNOW WHAT YOU ARE DOING LEAVE THE REST OF THIS STUFF ALONE!
+//________________________________________________
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
