Series work on the ministries system.  Events and photos now working.

--- a/_css/app.scss
+++ b/_css/app.scss
@@ -66,4 +66,5 @@
 @import 'components/serieslist';
 @import 'components/calendar-list';
 @import 'components/welcome-section';
+@import 'components/gallery';
 
