--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,7 +42,7 @@
                 <ul class="menu">
                     <li><a href="{{ "sermons.html" | prepend: site.baseurl | prepend: site.url }}">Sermons</a></li>
                     <li><a href="{{ "blog-list.html" | prepend: site.baseurl | prepend: site.url }}">Blog</a></li>
-                    <li><a href="#">Gallery</a></li>
+                    <li><a href="{{ "gallery.html" | prepend: site.baseurl | prepend: site.url }}">Gallery</a></li>
                 </ul>
             </li><!--/media-->
             <li><a href="{{ "contact-us.html" | prepend: site.baseurl | prepend: site.url }}">CONTACT US</a></li>
@@ -75,7 +75,7 @@
         <ul class="menu">
             <li><a href="{{ "sermons.html" | prepend: site.baseurl | prepend: site.url }}">Sermons</a></li>
             <li><a href="{{ "blog-list.html" | prepend: site.baseurl | prepend: site.url }}">Blog</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="{{ "gallery.html" | prepend: site.baseurl | prepend: site.url }}">Gallery</a></li>
         </ul>
     </li><!--/media-->
     <li><a href="{{ "contact-us.html" | prepend: site.baseurl | prepend: site.url }}">CONTACT US</a></li>
