--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
             <p><i class="fi-map"></i>   10029 Reed St, Cranesville, PA 16410 <br>
                 <i class="fi-telephone"></i>  (814) 746-5287 <br>
                 <i class="fi-mail"></i>   info@cranesvillebiblechurch.com <br>
-                <a href="#" title="sign in" class="footer-sign-in"><i class="fi-widget"></i> Manager Sign In</a>
+                <a href="http://airtable.com" target="blank" title="sign in" class="footer-sign-in"><i class="fi-widget"></i> Manager Sign In</a>
             </p>
         </div><!--/address-->
     </div><!--/footer-info-->
