added data back, added new build files

--- a/_css/components/_hero.scss
+++ b/_css/components/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    background: url(../bible3.jpg) no-repeat top center;
+    background: url(../auditorium.jpg) no-repeat top center;
     min-height: 30vh;
     background-size: cover;
     padding-top: 50px;
